fix spacing for buy_block

--- a/helium/src/scss/_forms.scss
+++ b/helium/src/scss/_forms.scss
@@ -213,7 +213,7 @@ ul.field-errors {
   }
 
   h4 {
-    padding: 0 0 0 27px;
+    padding: 0;
   }
 
   &>form, &>p {
@@ -314,6 +314,10 @@ ul.field-errors {
 
   select {
     margin-left: 0 !important;
+  }
+
+  .buy_block {
+    margin: 12px auto;
   }
 }
 
